--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity"
     android:orientation="vertical">
     <LinearLayout
@@ -64,33 +65,51 @@
         android:textAlignment="center"
         android:text="点击搜索歌曲"/>
         <!--歌曲排行榜-->
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical">
         <GridView
+            android:layout_marginTop="5dp"
             android:id="@+id/Leader_board"
             android:layout_width="wrap_content"
-
-            android:layout_height="wrap_content"/>
+            android:numColumns="3"
+            android:scrollbars="none"
+            android:verticalSpacing="3dp"
+            android:gravity="center_horizontal"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
         <TextView
             android:layout_marginTop="15dp"
             android:layout_width="match_parent"
+            android:text="----歌单列表-----"
             android:layout_height="wrap_content"
             android:textAlignment="center"/>
         <GridView
+            android:layout_margin="5dp"
             android:id="@+id/radiolist"
-
-            android:layout_marginTop="15dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:numColumns="3"
+            android:scrollbars="none"
+            android:verticalSpacing="3dp"
+            android:gravity="center_horizontal"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+            </LinearLayout>
+        </ScrollView>
     </LinearLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="horizontal">
-        <ImageView
+        <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/music_pic"
-            android:src="@mipmap/music_pic"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            fresco:roundAsCircle="true"
             android:layout_alignParentLeft="true"/>
         <ImageView
             android:id="@+id/music_next"
