--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,6 +70,7 @@
             android:layout_height="match_parent">
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
         <GridView
             android:layout_marginTop="5dp"
