--- a/app/src/main/res/layout/play_activity.xml
+++ b/app/src/main/res/layout/play_activity.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+
     xmlns:fresco="http://schemas.android.com/apk/res-auto">
     <com.facebook.drawee.view.SimpleDraweeView
 
         android:id="@+id/music_pic"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="350dp"
+        android:layout_height="350dp"
         fresco:roundAsCircle="true"
+        android:layout_centerInParent="true"
+
         fresco:roundingBorderWidth="10dp"
         fresco:roundingBorderColor="@color/colorPrimary"
         />
@@ -21,4 +24,4 @@
         android:text="停止"
         android:layout_marginTop="200dp"/>
 
-</LinearLayout>
+</RelativeLayout>
