--- a/app/src/main/res/layout/play_activity.xml
+++ b/app/src/main/res/layout/play_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -8,20 +8,68 @@
     <com.facebook.drawee.view.SimpleDraweeView
 
         android:id="@+id/music_pic"
-        android:layout_width="350dp"
-        android:layout_height="350dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         fresco:roundAsCircle="true"
         android:layout_centerInParent="true"
 
         fresco:roundingBorderWidth="10dp"
         fresco:roundingBorderColor="@color/colorPrimary"
         />
-    <TextView
-        android:id="@+id/stop"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorPrimary"
-        android:text="停止"
-        android:layout_marginTop="200dp"/>
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="4.0dip"
+        android:orientation="horizontal">
 
-</RelativeLayout>
+        <Button
+            android:id="@+id/btnPlayUrl"
+            android:layout_width="80dip"
+            android:layout_height="wrap_content"
+            android:text="播放" >
+        </Button>
+
+        <Button
+            android:id="@+id/btnPause"
+            android:layout_width="80dip"
+            android:layout_height="wrap_content"
+            android:text="暂停" >
+        </Button>
+
+        <Button
+            android:id="@+id/btnStop"
+            android:layout_width="80dip"
+            android:layout_height="wrap_content"
+            android:text="停止" >
+        </Button>
+
+        <Button
+            android:id="@+id/btnReplay"
+            android:layout_width="80dip"
+            android:layout_height="wrap_content"
+            android:text="重播" >
+        </Button>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dip"
+        android:orientation="horizontal" >
+
+        <SeekBar
+            android:id="@+id/skbProgress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1.0"
+            android:max="100"
+            android:paddingLeft="10dip"
+            android:paddingRight="10dip" >
+        </SeekBar>
+    </LinearLayout>
+
+
+
+</LinearLayout>
